# QuantTradingSystem

./: Dockerfile.api.multistrategy  Dockerfile.api.simple  README.md  api_multistrategy.py  api_simple.py  api_simple_docker.py  charts.py  docker-compose.multistrategy.yml  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  requirements-minimal.txt  requirements.txt  test_simple.py
api/: main.py
data/: __init__.py  alpha_vantage_fetcher.py  collector.py  fetcher.py  multi_source_fetcher.py
docker/: Dockerfile.api  Dockerfile.web
docker/nginx/: nginx.conf  nginx.multistrategy.conf  nginx.simple.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
strategies/: CLAUDE.md  __init__.py  base_strategy.py  bollinger_bands_strategy.py  historical_simulation.py  macd_strategy.py  moving_average.py  rsi_strategy.py  strategy_manager.py
web/: charts.html  index.html  simple-test.html  strategy.js  test-fix.html  test.html
